# CRAFT_Dispute_Forecasting

./: LICENSE  Makefile  README.md  pyproject.toml
CRAFT_dispute/: __init__.py  dataset.py  features.py  plots.py
CRAFT_dispute/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
