[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "CRAFT_dispute"
version = "0.0.1"
description = "An extension of conversational forecasting from the CRAFT modelderailement forecasting"
authors = [
  { name = "Michelle Gelman" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["CRAFT_dispute"]
include = ["pyproject.toml", "CRAFT_dispute/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["CRAFT_dispute"]
force-sort-within-sections = true

